--- a/AI Customer/app.yaml
+++ b/AI Customer/app.yaml
@@ -4,7 +4,7 @@ variables:
   - name: topic
     inputType: OutputTopic
     description: This is the output topic to write data to
-    defaultValue: chat
+    defaultValue: ai-chat-history
     required: true
   - name: conversation_length
     inputType: FreeText
