--- a/quix.yaml
+++ b/quix.yaml
@@ -160,6 +160,29 @@ deployments:
         description: This is the output topic to write data to
         required: true
         value: chat
+  - name: AI Customer SADEEP001
+    application: AI Customer
+    deploymentType: Service
+    version: 057f3e74d664b52f6e2854097a49d7d7fe3b61dc
+    resources:
+      cpu: 8000
+      memory: 16384
+      replicas: 1
+    state:
+      enabled: true
+      size: 10
+    desiredStatus: Running
+    variables:
+      - name: topic
+        inputType: OutputTopic
+        description: This is the output topic to write data to
+        required: true
+        value: chat
+      - name: conversation_length
+        inputType: FreeText
+        description: Maximum conversation length, after which the conversation resets.
+        required: true
+        value: 15
 
 # This section describes the Topics of the data pipeline
 topics:
