--- a/manual convo/app.yaml
+++ b/manual convo/app.yaml
@@ -4,6 +4,7 @@ variables:
   - name: input
     inputType: InputTopic
     description: Name of the input topic to listen to.
+    defaultValue: ai-chat-history
     required: false
   - name: output
     inputType: OutputTopic
