--- a/quix.yaml
+++ b/quix.yaml
@@ -9,7 +9,7 @@ deployments:
   - name: AI Customer
     application: AI Customer
     deploymentType: Service
-    version: dd3a92e5fc67db68e9d37b61b0ae788b9720d486
+    version: b365efdf1f13ec2183f12e9e094dd76d139df6ac
     resources:
       cpu: {{ ai_customer_cpu }}
       memory: {{ ai_customer_memory }}
@@ -23,7 +23,7 @@ deployments:
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: ai-chat-history
+        value: test-topic
       - name: conversation_length
         inputType: FreeText
         description: Maximum conversation length, after which the conversation resets.
