--- a/quix.yaml
+++ b/quix.yaml
@@ -119,6 +119,26 @@ deployments:
         description: This is the output topic to write data to
         required: true
         value: test-topic
+  - name: AI Customer
+    application: AI Customer
+    deploymentType: Service
+    version: b365efdf1f13ec2183f12e9e094dd76d139df6ac
+    resources:
+      cpu: 5000
+      memory: 15000
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: topic
+        inputType: OutputTopic
+        description: This is the output topic to write data to
+        required: true
+        value: test-topic
+      - name: conversation_length
+        inputType: FreeText
+        description: Maximum conversation length, after which the conversation resets.
+        required: true
+        value: 15
 
 # This section describes the Topics of the data pipeline
 topics:
