--- a/quix.yaml
+++ b/quix.yaml
@@ -164,7 +164,7 @@ topics:
       retentionInMinutes: 1440
       retentionInBytes: 52428800
   - name: test-topic
-    persisted: false
+    persisted: true
     configuration:
       partitions: 16
       replicationFactor: 2
