--- a/quix.yaml
+++ b/quix.yaml
@@ -112,7 +112,7 @@ deployments:
       cpu: 5000
       memory: 15000
       replicas: 5
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: topic
         inputType: OutputTopic
