--- a/quix.yaml
+++ b/quix.yaml
@@ -118,7 +118,7 @@ deployments:
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: test-topic
+        value: ai-chat-history
   - name: AI Customer
     application: AI Customer
     deploymentType: Service
