--- a/quix.yaml
+++ b/quix.yaml
@@ -127,6 +127,9 @@ deployments:
       cpu: 8000
       memory: 15000
       replicas: 1
+    state:
+      enabled: true
+      size: 6
     desiredStatus: Stopped
     variables:
       - name: topic
