Update deployment Streamlit Dashboard

--- a/quix.yaml
+++ b/quix.yaml
@@ -77,7 +77,7 @@ deployments:
     publicAccess:
       enabled: true
       urlPrefix: dashboard
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: redis_host
         inputType: Secret
