--- a/quix.yaml
+++ b/quix.yaml
@@ -142,6 +142,21 @@ deployments:
         description: Maximum conversation length, after which the conversation resets.
         required: true
         value: 15
+  - name: AI Support Agent 2
+    application: AI Customer Support Agent
+    deploymentType: Service
+    version: d810dc6c6d5cadab1aa3bd2d8c03a65d443659d0
+    resources:
+      cpu: 8000
+      memory: 16384
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: topic
+        inputType: OutputTopic
+        description: This is the output topic to write data to
+        required: true
+        value: ai-chat-history
 
 # This section describes the Topics of the data pipeline
 topics:
