--- a/quix.yaml
+++ b/quix.yaml
@@ -150,7 +150,7 @@ deployments:
       cpu: 8000
       memory: 16384
       replicas: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: topic
         inputType: OutputTopic
