--- a/quix.yaml
+++ b/quix.yaml
@@ -188,3 +188,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
+  - name: agent-topic
+    persisted: false
+    configuration:
+      partitions: 5
+      replicationFactor: 2
+      retentionInMinutes: 1440
+      retentionInBytes: 52428800
