--- a/quix.yaml
+++ b/quix.yaml
@@ -122,7 +122,7 @@ deployments:
   - name: AI Customer
     application: AI Customer
     deploymentType: Service
-    version: 6e49d70cb2995f513dec28478bc96539210679d9
+    version: ea2d0326e31a6af0745813adae0960ceedd5367f
     resources:
       cpu: 8000
       memory: 16384
@@ -132,16 +132,21 @@ deployments:
       size: 6
     desiredStatus: Stopped
     variables:
-      - name: topic
+      - name: input
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: ai-chat-history
+        value: customer-topic
       - name: conversation_length
         inputType: FreeText
         description: Maximum conversation length, after which the conversation resets.
         required: true
         value: 15
+      - name: output
+        inputType: InputTopic
+        description: ''
+        required: false
+        value: agent-topic
   - name: AI Support Agent 2
     application: AI Customer Support Agent
     deploymentType: Service
