--- a/AI Customer Support Agent/app.yaml
+++ b/AI Customer Support Agent/app.yaml
@@ -6,6 +6,11 @@ variables:
     description: This is the output topic to write data to
     defaultValue: ai-chat-history
     required: true
+  - name: output
+    inputType: InputTopic
+    description: ''
+    defaultValue: customer-topic
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
