--- a/quix.yaml
+++ b/quix.yaml
@@ -150,18 +150,23 @@ deployments:
   - name: AI Support Agent 2
     application: AI Customer Support Agent
     deploymentType: Service
-    version: f3e6d4bf97386bed86a2521877855c9dc5a39371
+    version: b054d21a91dcd9495d78942bf6a14d1bac0fd410
     resources:
       cpu: 8000
       memory: 16384
       replicas: 1
     desiredStatus: Stopped
     variables:
-      - name: topic
+      - name: input
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: ai-chat-history
+        value: agent-topic
+      - name: output
+        inputType: InputTopic
+        description: ''
+        required: false
+        value: customer-topic
 
 # This section describes the Topics of the data pipeline
 topics:
