--- a/quix.yaml
+++ b/quix.yaml
@@ -155,7 +155,7 @@ deployments:
       cpu: 8000
       memory: 16384
       replicas: 1
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: input
         inputType: OutputTopic
