--- a/test/app.yaml
+++ b/test/app.yaml
@@ -4,6 +4,7 @@ variables:
   - name: input
     inputType: InputTopic
     description: Name of the input topic to listen to.
+    defaultValue: test-topic
     required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
