--- a/test/app.yaml
+++ b/test/app.yaml
@@ -6,6 +6,11 @@ variables:
     description: Name of the input topic to listen to.
     defaultValue: test-topic
     required: false
+  - name: consumergroup
+    inputType: FreeText
+    description: ''
+    defaultValue: A
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
