Add deployment test B

--- a/quix.yaml
+++ b/quix.yaml
@@ -187,6 +187,26 @@ deployments:
         description: ''
         required: false
         value: A
+  - name: test B
+    application: test
+    deploymentType: Service
+    version: f0299ff00adb90d8cabad6459c5ef2b44a4cc348
+    resources:
+      cpu: 200
+      memory: 500
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: input
+        inputType: InputTopic
+        description: Name of the input topic to listen to.
+        required: false
+        value: test-topic
+      - name: consumergroup
+        inputType: FreeText
+        description: ''
+        required: false
+        value: B
 
 # This section describes the Topics of the data pipeline
 topics:
