Update deployment AI Support Agent 2

--- a/quix.yaml
+++ b/quix.yaml
@@ -160,7 +160,7 @@ deployments:
       cpu: 8000
       memory: 16384
       replicas: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: OutputTopic
