--- a/test/app.yaml
+++ b/test/app.yaml
@@ -9,7 +9,7 @@ variables:
   - name: consumergroup
     inputType: FreeText
     description: ''
-    defaultValue: B
+    defaultValue: v2
     required: false
   - name: role
     inputType: FreeText
