--- a/quix.yaml
+++ b/quix.yaml
@@ -172,31 +172,6 @@ deployments:
         description: ''
         required: false
         value: customer-topic
-  - name: test
-    application: test
-    deploymentType: Service
-    version: 54655fe35ce5469d4dc753dedc0223de52647c51
-    resources:
-      cpu: 200
-      memory: 500
-      replicas: 1
-    desiredStatus: Stopped
-    variables:
-      - name: input
-        inputType: InputTopic
-        description: Name of the input topic to listen to.
-        required: false
-        value: test-topic
-      - name: consumergroup
-        inputType: FreeText
-        description: ''
-        required: false
-        value: v2
-      - name: role
-        inputType: FreeText
-        description: ''
-        required: false
-        value: A
   - name: B
     application: test
     deploymentType: Service
@@ -222,6 +197,31 @@ deployments:
         description: ''
         required: false
         value: B
+  - name: A
+    application: test
+    deploymentType: Service
+    version: 54655fe35ce5469d4dc753dedc0223de52647c51
+    resources:
+      cpu: 200
+      memory: 500
+      replicas: 1
+    desiredStatus: Stopped
+    variables:
+      - name: input
+        inputType: InputTopic
+        description: Name of the input topic to listen to.
+        required: false
+        value: test-topic
+      - name: consumergroup
+        inputType: FreeText
+        description: ''
+        required: false
+        value: v3
+      - name: role
+        inputType: FreeText
+        description: ''
+        required: false
+        value: A
 
 # This section describes the Topics of the data pipeline
 topics:
