--- a/quix.yaml
+++ b/quix.yaml
@@ -135,7 +135,7 @@ deployments:
     state:
       enabled: true
       size: 6
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: input
         inputType: OutputTopic
