--- a/quix.yaml
+++ b/quix.yaml
@@ -152,31 +152,6 @@ deployments:
         description: ''
         required: false
         value: agent-topic
-  - name: B
-    application: test
-    deploymentType: Service
-    version: e38a78e80b6ba2bc5c039635de138498e46d506f
-    resources:
-      cpu: 200
-      memory: 500
-      replicas: 1
-    desiredStatus: Stopped
-    variables:
-      - name: input
-        inputType: InputTopic
-        description: Name of the input topic to listen to.
-        required: false
-        value: test-topic
-      - name: consumergroup
-        inputType: FreeText
-        description: ''
-        required: false
-        value: v6
-      - name: role
-        inputType: FreeText
-        description: ''
-        required: false
-        value: B
   - name: Agent - Kicks off convo
     application: test
     deploymentType: Service
@@ -202,6 +177,31 @@ deployments:
         description: ''
         required: false
         value: A
+  - name: Customer - listen and respond
+    application: test
+    deploymentType: Service
+    version: e38a78e80b6ba2bc5c039635de138498e46d506f
+    resources:
+      cpu: 200
+      memory: 500
+      replicas: 1
+    desiredStatus: Stopped
+    variables:
+      - name: input
+        inputType: InputTopic
+        description: Name of the input topic to listen to.
+        required: false
+        value: test-topic
+      - name: consumergroup
+        inputType: FreeText
+        description: ''
+        required: false
+        value: v6
+      - name: role
+        inputType: FreeText
+        description: ''
+        required: false
+        value: B
 
 # This section describes the Topics of the data pipeline
 topics:
