--- a/quix.yaml
+++ b/quix.yaml
@@ -166,7 +166,7 @@ deployments:
         inputType: InputTopic
         description: Name of the input topic to listen to.
         required: false
-        value: test-topic
+        value: test-topic-2
       - name: consumergroup
         inputType: FreeText
         description: ''
