--- a/quix.yaml
+++ b/quix.yaml
@@ -20,7 +20,7 @@ deployments:
         inputType: InputTopic
         description: Name of the input topic to listen to.
         required: false
-        value: ai-chat-history
+        value: agent-chat-2
       - name: output
         inputType: OutputTopic
         description: Name of the output topic to write to.
