Update deployment AI Support Agent

--- a/quix.yaml
+++ b/quix.yaml
@@ -123,12 +123,12 @@ deployments:
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: agent-chat-3
+        value: test-1000
       - name: output
         inputType: InputTopic
         description: ''
         required: false
-        value: agent-chat-3
+        value: test-1000
   - name: AI Customer
     application: AI Customer
     deploymentType: Service
