Add topic test-1001

--- a/quix.yaml
+++ b/quix.yaml
@@ -369,3 +369,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
+  - name: test-1001
+    persisted: false
+    configuration:
+      partitions: 2
+      replicationFactor: 2
+      retentionInMinutes: 1440
+      retentionInBytes: 52428800
