--- a/quix.yaml
+++ b/quix.yaml
@@ -127,7 +127,7 @@ deployments:
   - name: AI Customer
     application: AI Customer
     deploymentType: Service
-    version: b49f8ec57f3642862563c6b8d58fca8a82130be9
+    version: ceb011c5aa788793476e7cf8cacb20ec5be34d1b
     resources:
       cpu: 8000
       memory: 16384
@@ -141,17 +141,12 @@ deployments:
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: test-1004
+        value: ai-chat-history
       - name: conversation_length
         inputType: FreeText
         description: Maximum conversation length, after which the conversation resets.
         required: true
         value: 15
-      - name: output
-        inputType: InputTopic
-        description: ''
-        required: false
-        value: test-1004
   - name: Agent - Kicks off convo
     application: test
     deploymentType: Service
