--- a/quix.yaml
+++ b/quix.yaml
@@ -117,7 +117,7 @@ deployments:
       cpu: 2500
       memory: 4100
       replicas: 2
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: input
         inputType: OutputTopic
