Add topic ai-chat-history-3

--- a/quix.yaml
+++ b/quix.yaml
@@ -199,3 +199,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
+  - name: ai-chat-history-3
+    persisted: false
+    configuration:
+      partitions: 3
+      replicationFactor: 2
+      retentionInMinutes: 1440
+      retentionInBytes: 52428800
