--- a/quix.yaml
+++ b/quix.yaml
@@ -117,7 +117,7 @@ deployments:
       cpu: 4100
       memory: 8000
       replicas: 2
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: OutputTopic
