Add topic ai-chat-history-5

--- a/quix.yaml
+++ b/quix.yaml
@@ -206,3 +206,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
+  - name: ai-chat-history-5
+    persisted: false
+    configuration:
+      partitions: 2
+      replicationFactor: 2
+      retentionInMinutes: 1440
+      retentionInBytes: 52428800
