Update topic ai-chat-history-5

--- a/quix.yaml
+++ b/quix.yaml
@@ -179,7 +179,7 @@ topics:
       retentionInMinutes: 1440
       retentionInBytes: 52428800
   - name: ai-chat-history-5
-    persisted: false
+    persisted: true
     configuration:
       partitions: 2
       replicationFactor: 2
