--- a/quix.yaml
+++ b/quix.yaml
@@ -125,6 +125,31 @@ deployments:
         description: Maximum conversation length, after which the conversation resets.
         required: true
         value: 15
+  - name: Sentiment Analyzer 1
+    application: Sentiment Analyzer
+    deploymentType: Service
+    version: f69039cd7b8bcd03c75b176146266b33c8a5fcac
+    resources:
+      cpu: 200
+      memory: 500
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: input
+        inputType: InputTopic
+        description: Name of the input topic to listen to.
+        required: true
+        value: conversation-store1
+      - name: output
+        inputType: OutputTopic
+        description: Name of the output topic to write to.
+        required: true
+        value: ai-chat-history-with-sentiment
+      - name: buffer_delay
+        inputType: FreeText
+        description: Input buffer configuration (timeout and timespan in milliseconds).
+        required: false
+        value: 0
 
 # This section describes the Topics of the data pipeline
 topics:
