Update deployment AI Support Agent 2

--- a/quix.yaml
+++ b/quix.yaml
@@ -190,7 +190,7 @@ deployments:
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: agent-topic
+        value: conversation-store2
 
 # This section describes the Topics of the data pipeline
 topics:
