--- a/quix.yaml
+++ b/quix.yaml
@@ -236,6 +236,21 @@ deployments:
         description: Maximum conversation length, after which the conversation resets.
         required: true
         value: 15
+  - name: AI Support Agent 3
+    application: AI Customer Support Agent
+    deploymentType: Service
+    version: 4c17d62c575911af63f97031ced790a84cb6ff7c
+    resources:
+      cpu: 8000
+      memory: 16000
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: input
+        inputType: OutputTopic
+        description: This is the output topic to write data to
+        required: true
+        value: conversation-store3
 
 # This section describes the Topics of the data pipeline
 topics:
