--- a/quix.yaml
+++ b/quix.yaml
@@ -251,6 +251,31 @@ deployments:
         description: This is the output topic to write data to
         required: true
         value: conversation-store3
+  - name: Sentiment Analyzer 3
+    application: Sentiment Analyzer
+    deploymentType: Service
+    version: f69039cd7b8bcd03c75b176146266b33c8a5fcac
+    resources:
+      cpu: 1000
+      memory: 1000
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: input
+        inputType: InputTopic
+        description: Name of the input topic to listen to.
+        required: true
+        value: chat
+      - name: output
+        inputType: OutputTopic
+        description: Name of the output topic to write to.
+        required: true
+        value: ai-chat-history-with-sentiment
+      - name: buffer_delay
+        inputType: FreeText
+        description: Input buffer configuration (timeout and timespan in milliseconds).
+        required: false
+        value: 0
 
 # This section describes the Topics of the data pipeline
 topics:
