--- a/quix.yaml
+++ b/quix.yaml
@@ -113,7 +113,7 @@ deployments:
     state:
       enabled: true
       size: 6
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: OutputTopic
