--- a/quix.yaml
+++ b/quix.yaml
@@ -184,7 +184,7 @@ deployments:
     state:
       enabled: true
       size: 6
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: OutputTopic
