Update deployment AI Customer 3

--- a/quix.yaml
+++ b/quix.yaml
@@ -224,7 +224,7 @@ deployments:
       cpu: 4100
       memory: 8000
       replicas: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: OutputTopic
