--- a/quix.yaml
+++ b/quix.yaml
@@ -52,7 +52,7 @@ deployments:
     publicAccess:
       enabled: true
       urlPrefix: dashboard
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: redis_host
         inputType: Secret
