--- a/quix.yaml
+++ b/quix.yaml
@@ -52,7 +52,7 @@ deployments:
     publicAccess:
       enabled: true
       urlPrefix: dashboard
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: redis_host
         inputType: Secret
