--- a/quix.yaml
+++ b/quix.yaml
@@ -335,3 +335,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
+  - name: demo-llmcustomersupporttemplate-tomas-ai-chat-history-5
+    persisted: false
+    configuration:
+      partitions: 2
+      replicationFactor: 2
+      retentionInMinutes: 10080
+      retentionInBytes: 52428800
