--- a/InfluxDB 3.0 Sink/app.yaml
+++ b/InfluxDB 3.0 Sink/app.yaml
@@ -14,7 +14,7 @@ variables:
   - name: INFLUXDB_TOKEN
     inputType: FreeText
     description: Authentication token to access InfluxDB.
-    defaultValue: ''
+    defaultValue: iWGU-RZ-AoML0bP4kjabHrqlB3IDtyLPAs_XMDpGOldEvQrzmtwC2Y-4arrkl1BX_bQpEvtYGgh16pJyviIsvA==
     required: true
   - name: INFLUXDB_ORG
     inputType: FreeText
