--- a/InfluxDB 3.0 Sink/app.yaml
+++ b/InfluxDB 3.0 Sink/app.yaml
@@ -19,7 +19,7 @@ variables:
   - name: INFLUXDB_ORG
     inputType: FreeText
     description: Organization name in InfluxDB.
-    defaultValue: ''
+    defaultValue: ContentSquad
     required: false
   - name: INFLUXDB_DATABASE
     inputType: FreeText
