--- a/quix.yaml
+++ b/quix.yaml
@@ -19,8 +19,8 @@ deployments:
       - name: input
         inputType: InputTopic
         description: Name of the input topic to listen to.
-        required: false
-        value: ai-chat-history-5
+        required: true
+        value: ai-chat-history-6
       - name: output
         inputType: OutputTopic
         description: Name of the output topic to write to.
