--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -21,6 +21,11 @@ variables:
     description: ''
     defaultValue: ''
     required: false
+  - name: INFLUXDB_ORG
+    inputType: FreeText
+    description: ''
+    defaultValue: ''
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
