'Streamlit Dashboard/app.yaml' edited via Quix Portal

--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -26,6 +26,11 @@ variables:
     description: ''
     defaultValue: ''
     required: false
+  - name: INFLUXDB_DATABASE
+    inputType: InputTopic
+    description: ''
+    defaultValue: ''
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
