--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -14,7 +14,7 @@ variables:
   - name: INFLUXDB_TOKEN
     inputType: FreeText
     description: ''
-    defaultValue: ''
+    defaultValue: iWGU-RZ-AoML0bP4kjabHrqlB3IDtyLPAs_XMDpGOldEvQrzmtwC2Y-4arrkl1BX_bQpEvtYGgh16pJyviIsvA=="
     required: false
   - name: INFLUXDB_HOST
     inputType: FreeText
