--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -19,7 +19,7 @@ variables:
   - name: INFLUXDB_HOST
     inputType: FreeText
     description: ''
-    defaultValue: ''
+    defaultValue: https://us-east-1-1.aws.cloud2.influxdata.com
     required: false
   - name: INFLUXDB_ORG
     inputType: FreeText
