'Streamlit Dashboard/app.yaml' edited via Quix Portal

--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -24,7 +24,7 @@ variables:
   - name: INFLUXDB_ORG
     inputType: FreeText
     description: ''
-    defaultValue: ''
+    defaultValue: ContentSquad
     required: false
   - name: INFLUXDB_DATABASE
     inputType: FreeText
