--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -29,7 +29,7 @@ variables:
   - name: INFLUXDB_DATABASE
     inputType: FreeText
     description: ''
-    defaultValue: ''
+    defaultValue: ConversationStore
     required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
