--- a/quix.yaml
+++ b/quix.yaml
@@ -76,7 +76,7 @@ deployments:
         value: ConversationStore
   - name: AI Support Agent
     application: AI Customer Support Agent
-    deploymentType: Job
+    deploymentType: Service
     version: b7bdf2c3534cddef9920fda911b23df89a249e39
     resources:
       cpu: 4100
