'Streamlit Dashboard/app.yaml' edited via Quix Portal

--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -31,6 +31,11 @@ variables:
     description: ''
     defaultValue: ConversationStore
     required: false
+  - name: GRPC_DEFAULT_SSL_ROOTS_FILE_PATH
+    inputType: FreeText
+    description: ''
+    defaultValue: ./cacert.pem
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
