--- a/quix.yaml
+++ b/quix.yaml
@@ -58,7 +58,7 @@ deployments:
         inputType: FreeText
         description: ''
         required: false
-        value: iWGU-RZ-AoML0bP4kjabHrqlB3IDtyLPAs_XMDpGOldEvQrzmtwC2Y-4arrkl1BX_bQpEvtYGgh16pJyviIsvA=="
+        value: iWGU-RZ-AoML0bP4kjabHrqlB3IDtyLPAs_XMDpGOldEvQrzmtwC2Y-4arrkl1BX_bQpEvtYGgh16pJyviIsvA==
       - name: INFLUXDB_HOST
         inputType: FreeText
         description: ''
