Update deployment AI Support Agent

--- a/quix.yaml
+++ b/quix.yaml
@@ -82,6 +82,7 @@ deployments:
       cpu: 4100
       memory: 8000
       replicas: 1
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: OutputTopic
