--- a/quix.yaml
+++ b/quix.yaml
@@ -192,3 +192,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
+  - name: ai-chat-history
+    persisted: false
+    configuration:
+      partitions: 3
+      replicationFactor: 2
+      retentionInMinutes: 1440
+      retentionInBytes: 52428800
