Update deployment AI Support Agent

--- a/quix.yaml
+++ b/quix.yaml
@@ -88,7 +88,7 @@ deployments:
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: ai-chat-history-7
+        value: ai-chat-history
   - name: AI Customer
     application: AI Customer
     deploymentType: Service
