--- a/quix.yaml
+++ b/quix.yaml
@@ -103,7 +103,7 @@ deployments:
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: ai-chat-history-7
+        value: ai-chat-history
       - name: conversation_length
         inputType: FreeText
         description: Maximum conversation length, after which the conversation resets.
