--- a/quix.yaml
+++ b/quix.yaml
@@ -82,7 +82,7 @@ deployments:
       cpu: 4100
       memory: 8000
       replicas: 3
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: input
         inputType: OutputTopic
