--- a/quix.yaml
+++ b/quix.yaml
@@ -91,7 +91,7 @@ deployments:
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: ai-chat-history
+        value: ai-chat
   - name: AI Customer
     application: AI Customer
     deploymentType: Service
