--- a/quix.yaml
+++ b/quix.yaml
@@ -131,12 +131,12 @@ deployments:
         inputType: Secret
         description: Host address for the InfluxDB instance.
         required: true
-        value: influxdb_host
+        secretKey: influxdb_host
       - name: INFLUXDB_TOKEN
         inputType: Secret
         description: Authentication token to access InfluxDB.
         required: true
-        value: influxdb_token
+        secretKey: influxdb_token
       - name: INFLUXDB_ORG
         inputType: FreeText
         description: Organization name in InfluxDB.
