Update topic ai-chat

--- a/quix.yaml
+++ b/quix.yaml
@@ -164,13 +164,13 @@ topics:
     persisted: true
     configuration:
       partitions: 3
-      replicationFactor: 3
+      replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
   - name: ai-chat
-    persisted: false
+    persisted: true
     configuration:
       partitions: 3
-      replicationFactor: 3
+      replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
